--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">MoviesFilter</string>
+    <string name="poster_content_description">Poster</string>
 </resources>
